[package]
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>"]
build = "build.rs"
name = "telamon"
readme = "README.md"
version = "0.2.0"

[[bin]]
name = "cuda-characterize"
path = "src/bin/cuda_characterize.rs"
required-features = ["cuda"]

[[bin]]
name = "bench-perf-model"
path = "tools/bench_perf_model/main.rs"
required-features = ["cuda"]

[[bench]]
name = "descent"
harness = false

[[bench]]
name = "memory"
harness = false

[build-dependencies]
cc = "1.0.12"

[build-dependencies.telamon-gen]
path = "telamon-gen"

[dependencies]
binary-heap-plus = "0.1.4"
boxfnonce = "0.1.0"
config = "0.8.0"
crossbeam = "0.3.2"
env_logger = "0.5.9"
errno = "0.2.3"
failure = "0.1.1"
futures-preview = "0.2"
getopts = "0.2.17"
interval-heap = "0.0.5"
ipc-channel = "0.10.0"
itertools = "0.7.8"
lazy_static = "1.0.0"
libc = "0.2.40"
libloading = "0.5.0"
linked-list = "0.0.3"
log = "0.4.1"
matches = "0.1.6"
ndarray = "0.11.2"
num = "0.1.42"
num_cpus = "1.8.0"
parking_lot = "0.5.5"
pbr = "1.0.0"
prctl = "1.0.0"
prettytable-rs = "0.6.7"
rand = "0.4.2"
rayon = "1.0.1"
regex = "0.2.10"
rpds = "0.5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.22"
std-semaphore = "0.1.0"
tempfile = "3.0.1"
toml = "0.4"
xdg = "^2.1"

[dependencies.telamon-utils]
path = "telamon-utils"

[dependencies.tokio-timer]
git = "https://github.com/ulysseB/tokio-timer.git"

[dev-dependencies]
gcc = "0.3.54"
tempdir = "0.3.7"
criterion = "0.2.4"
jemalloc-ctl = "0.1"

[features]
cuda = []
default = []
format_exh = []
lex = []
mppa = []

[workspace]
members = [
    "kernels",
    "telamon-gen",
    "telamon-utils",
    "telamon-gen/cc_tests",
    "telamon-capi",
]
