[package]
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>"]
name = "telamon-kernels"
version = "0.1.0"

[dependencies]
env_logger = "0.5.7"
itertools = "0.7.8"
ndarray = "0.11.2"
num = "0.1.42"

[dependencies.telamon]
path = "../"

[dependencies.telamon-utils]
path = "../telamon-utils"

[features]
cuda = ["telamon/cuda"]
