[package]
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>"]
name = "telamon-kernels"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.0"
env_logger = "0.5.9"
itertools = "0.7.8"
libc = "0.2.40"
log = "0.4.1"
ndarray = "0.11.2"
num = "0.2.0"
num_cpus = "1.8.0"
rayon = "1.0.1"
rand = "0.5.5"
rpds = { version = "0.5.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
cuda-sys = { optional = true, version = "0.1.0" }

telamon = { path = "../" }
telamon-cuda = { path = "../backend/cuda", optional=true }
telamon-x86 = { path = "../backend/x86" }
utils = { package = "telamon-utils", path = "../telamon-utils" }

[dev-dependencies]
futures = "0.1.23"

[features]
cuda = [
    "telamon-cuda",
    "cuda-sys",
]

[[bench]]
name = "cuda-search"
path = "benches/cuda_search.rs"
harness = false
required-features = ["cuda"]

[[bench]]
name = "cuda-deadend"
path = "benches/cuda_deadend.rs"
harness = false
required-features = ["cuda"]

[[bench]]
name = "cuda-bound"
path = "benches/cuda_bound.rs"
harness = false
required-features = ["cuda"]

[[bench]]
name = "cuda-variance"
path = "benches/cuda_variance.rs"
harness = false
required-features = ["cuda"]
