[package]
name = "telamon-capi"
version = "0.1.0"
authors = ["Basile Clement <basile@clement.pm>"]

[features]
cuda = [
     "telamon/cuda",
     "telamon-kernels/cuda",
]

[lib]
name = "telamon_capi"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.5.9"
libc = "0.2"

[dependencies.telamon]
path = "../"

[dependencies.telamon-kernels]
path = "../kernels"
