[package]
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>", "Basile Clement <basile.clement@ens.fr>"]
name = "telamon-cli"
version = "0.1.0"

[dependencies]
crossbeam = "0.3.2"
streaming-stats = "0.2"
dot = "0.1.4"
env_logger = "0.5.9"
itertools = "0.7.8"
libc = "0.2.40"
log = "0.4.1"
ndarray = "0.11.2"
num = "0.2.0"
num_cpus = "1.8.0"
rayon = "1.0.1"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1.0.22"
indicatif = "0.9.0"
structopt = "0.2"
csv = "1"

[dependencies.telamon]
path = "../"

[dependencies.telamon-utils]
path = "../telamon-utils"

[dependencies.telamon-kernels]
path = "../kernels"

[dev-dependencies]
futures = "0.1.23"

[features]
cuda = [
    "telamon/cuda",
    "telamon-kernels/cuda",
]
