[package]
authors = ["Basile Clement <basile.clement@ens.fr>"]
name = "telamon-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = "0.2"
cuda-sys = { version = "0.1", optional = true }
libc = { version = "0.2", optional = true }
env_logger = "0.5"
log = "0.4"
serde_json = "1.0"
tui = "0.5"
futures = "0.1"
termion = "1.5"
crossbeam = "0.7"
bincode = "1.0"
streaming-stats = "0.2"
num_cpus = "1.8.0"
nvml-wrapper = { version = "0.4.1", optional = true }

telamon = { path = "../" }
telamon-cuda = { path = "../backend/cuda", optional = true }
telamon-kernels = { path = "../kernels" }
telamon-utils = { path = "../telamon-utils" }
telamon-x86 = { path = "../backend/x86", optional = true }

[features]
default = ["cuda"]
cuda = ["telamon-cuda/real_gpu", "cuda-sys", "libc", "nvml-wrapper"]
x86 = ["telamon-x86"]
