[package]
authors = ["Basile Clement <basile@clement.pm>"]
name = "telamon-debugger"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
crossbeam = "0.7"
crossbeam-deque = "0.7"
futures = "0.1.3"
rayon = "1.0.1"
termion = "1.5"
tui = "0.5.0"

telamon = { path = "../" }
telamon-cuda = { path = "../backend/cuda" }
telamon-kernels = { path = "../kernels", features = ["cuda"] }
telamon-utils = { path = "../telamon-utils" }
telamon-x86 = { path = "../backend/x86" }
