[package]
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>"]
build = "build.rs"
name = "telamon-gen"
version = "1.0.0"

[features]
lex = []

[[bin]]
doc = false
name = "cli_gen"

[build-dependencies]
lalrpop = "0.14"
cc = "1.0.12"
libc = "0.2.40"

[dependencies]
env_logger = "0.5.9"
handlebars = "0.28.0"
itertools = "0.7.8"
lalrpop-util = "0.14"
lazy_static = "1.0.0"
log = "0.4.1"
regex = "0.2.10"
rustfmt = "0.10.0"
serde = "1.0.43"
serde_derive = "1.0.43"
serde_json = "1.0.16"
topological-sort = "0.1.0"
libc = "0.2.40"

[dependencies.telamon-utils]
path = "../telamon-utils"
