[package]
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>"]
build = "build.rs"
name = "telamon-gen"
version = "1.0.0"

[[bench]]
harness = false
name = "lexer"

[[bin]]
doc = false
name = "cli_gen"

[build-dependencies]
cc = "1.0.12"
lalrpop = "0.14"
libc = "0.2.40"

[dependencies]
env_logger = "0.5.9"
handlebars = "0.28.0"
itertools = "0.7.8"
lalrpop-util = "0.14"
lazy_static = "1.0.0"
libc = "0.2.40"
errno = "0.2.4"
log = "0.4.1"
regex = "0.2.10"
rustfmt = "0.10.0"
serde = "1.0.43"
# cbindgen, used in telamon_capi which transitively depends on telamon_gen,
# currently needs version 1.0.21 to work, so we use it here as well. See
# https://github.com/eqrion/cbindgen/pull/159
serde_derive = "=1.0.21"
serde_json = "1.0.16"
indexmap = { version = "1.0", features = ["serde-1"] }

[dependencies.telamon-utils]
path = "../telamon-utils"

[dev-dependencies]
criterion = "0.2"

[features]
lex = []
