[package]
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>"]
build = "build.rs"
name = "telamon-gen"
version = "1.0.0"
edition = "2018"

[[bench]]
harness = false
name = "lexer"

[[bin]]
doc = false
name = "cli_gen"

[build-dependencies]
cc = "1.0.12"
lalrpop = "0.14"
libc = "0.2.40"

[dependencies]
env_logger = "0.5.9"
handlebars = "0.28.0"
itertools = "0.8"
lalrpop-util = "0.14"
lazy_static = "1.0.0"
libc = "0.2.40"
errno = "0.2.4"
failure = "0.1.2"
log = "0.4.1"
proc-macro2 = "0.4.9"
quote = "0.6.4"
regex = "0.2.10"
serde = {version = "1.0.43", features = ["derive"]}
serde_json = "1.0.16"
indexmap = { version = "1.0", features = ["serde-1"] }
utils = {package = "telamon-utils", path = "../telamon-utils"}

[dev-dependencies]
criterion = "0.2"

[features]
lex = []
