[package]
name = "telamon-utils"
version = "1.0.0"
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>"]
edition = "2018"

[dependencies]
fnv = "1.0"
itertools = "0.8"
linked-list = "0.0.3"
linked-hash-map = "0.5"
num = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.2"
crc = "1.8"
failure = "0.1.1"
