[package]
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>", "Nicolas Tollenaere <nicolas.tollenaere@inria.fr>"]
name = "telamon-mppa"
version = "1.0.0"
edition = "2018"

[build-dependencies]
cc = "1.0"

[dependencies]
crossbeam = "0.7"
itertools = "0.8"
libc = "0.2.40"
log = "0.4"
num = "0.2"
telamon = {path = "../../"}
telajax = {path = "../../telajax", optional = true}
utils = {package = "telamon-utils", path = "../../telamon-utils"}

[dev-dependencies]
bincode = "1.0"
serde = "1.0"
serde_json = "1.0.22"

[features]
real_mppa = ["telajax"]
default = ["real_mppa"]
