[package]
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>", "Nicolas Tollenaere <nicolas.tollenaere@inria.fr>"]
name = "telamon-mppa"
version = "1.0.0"
edition = "2018"

[build-dependencies]
cc = "1.0"

[dependencies]
crossbeam = "0.7"
fxhash = "0.2"
itertools = "0.8"
libc = "0.2.40"
log = "0.4"
num = "0.2"
telamon = {path = "../../"}
telamon-c = {path = "../c"}
telajax = {path = "../../telajax", optional = true}
utils = {package = "telamon-utils", path = "../../telamon-utils"}

[dev-dependencies]
bincode = "1.0"
env_logger = "0.5.9"
rpds = { version = "0.5.0", features = ["serde"] }
serde = "1.0"
serde_json = "1.0.22"
structopt = "0.2"
telamon-kernels = {path = "../../kernels"}

[features]
real_mppa = ["telajax"]
