[package]
authors = ["Ulysse Beaugnon <ulysse.beaugnon@ens.fr>"]
build = "build.rs"
name = "telamon-gen-test"
version = "0.1.0"

[build-dependencies]
env_logger = "0.5.9"

[build-dependencies.telamon-gen]
path = "../"

[dependencies]
env_logger = "0.5.9"
itertools = "0.7.8"
log = "0.4.1"
num = "0.2.0"

[dependencies.telamon-utils]
path = "../../telamon-utils"

[features]
default = ["gen_applicators"]
gen_applicators = []
noformat_exh = []
